[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/n-body-simulation/NBodySimulation3D.gd" type="Script" id=1]
[ext_resource path="res://scenes/Camera.gd" type="Script" id=2]
[ext_resource path="res://scenes/PlanetDetails.gd" type="Script" id=3]
[ext_resource path="res://scenes/Universe.gd" type="Script" id=4]

[node name="TestScene" type="Spatial"]
script = ExtResource( 4 )

[node name="NBodySimulation3D" type="Spatial" parent="."]
script = ExtResource( 1 )
G = 200.0

[node name="Camera" type="Camera" parent="."]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 41.302 )
far = 10000.0
script = ExtResource( 2 )

[node name="RayCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )
collide_with_areas = true

[node name="PanelContainer" type="PanelContainer" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -14.0
margin_bottom = 14.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_bottom = 14.0

[node name="PlanetDetails" type="PanelContainer" parent="."]
pause_mode = 2
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -45.0
margin_right = 88.0
margin_bottom = 45.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlanetDetails"]
margin_left = 7.0
margin_top = 7.0
margin_right = 107.0
margin_bottom = 129.0

[node name="NameLabel" type="Label" parent="PlanetDetails/VBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0
text = "NAME"

[node name="Name" type="LineEdit" parent="PlanetDetails/VBoxContainer"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 42.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="MassLabel" type="Label" parent="PlanetDetails/VBoxContainer"]
margin_top = 46.0
margin_right = 100.0
margin_bottom = 60.0
text = "MASS"

[node name="Mass" type="HSlider" parent="PlanetDetails/VBoxContainer"]
margin_top = 64.0
margin_right = 100.0
margin_bottom = 80.0
size_flags_vertical = 1
min_value = 1.0
max_value = 10000.0
step = 0.1
value = 1.0
exp_edit = true

[node name="Label" type="Label" parent="PlanetDetails/VBoxContainer/Mass"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorLabel" type="Label" parent="PlanetDetails/VBoxContainer"]
margin_top = 84.0
margin_right = 100.0
margin_bottom = 98.0
text = "COLOR"

[node name="Color" type="ColorPickerButton" parent="PlanetDetails/VBoxContainer"]
margin_top = 102.0
margin_right = 100.0
margin_bottom = 122.0
text = "Color"
edit_alpha = false

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
light_energy = 0.5
[connection signal="body_selected" from="Camera" to="." method="_on_Camera_body_selected"]
[connection signal="start_creating_planet" from="Camera" to="." method="_on_Camera_start_creating_planet"]
[connection signal="stop_creating_planet" from="Camera" to="." method="_on_Camera_stop_creating_planet"]
[connection signal="text_changed" from="PlanetDetails/VBoxContainer/Name" to="PlanetDetails" method="_on_Name_text_changed"]
[connection signal="value_changed" from="PlanetDetails/VBoxContainer/Mass" to="PlanetDetails" method="_on_Mass_value_changed"]
[connection signal="color_changed" from="PlanetDetails/VBoxContainer/Color" to="PlanetDetails" method="_on_Color_color_changed"]
